@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               GnuPG
-version:            0.12
+version:            0.13
 abstract:           ~
 author:  []
 license:            unknown
