@@ -1,3 +1,7 @@
+2010-04-16  version 0.13 Mark Frost
+
+    * Catching up some outstanding changes I left out in releases 11 and 12
+
 2010-02-03  version 0.12 Mark Frost
 
     * This release is merely some documentation fixes
